--- a/styles/how-strensiq-works.css
+++ b/styles/how-strensiq-works.css
@@ -226,30 +226,30 @@
 @media (min-width: 992px) {
 
     .hpp-dtc-m-hero.internal-hero .hero-bg img {
-        object-position: left;
+        object-position: center;
     }
 
-    .hpp-dtc-m-hero.internal-hero.how-sq-helps .content .pre-title {
+    /* .hpp-dtc-m-hero.internal-hero.how-sq-helps .content .pre-title {
         left: -9%;
-    }
+    } */
 }
 
 @media (min-width: 1366px) {
-    .hpp-dtc-m-hero.internal-hero.how-sq-helps .content .pre-title {
+    /* .hpp-dtc-m-hero.internal-hero.how-sq-helps .content .pre-title {
         left: -12%;
-    }
+    } */
 }
 
 @media (min-width: 1500px) {
-    .hpp-dtc-m-hero.internal-hero.how-sq-helps .content .pre-title {
+    /* .hpp-dtc-m-hero.internal-hero.how-sq-helps .content .pre-title {
         left: -18%;
-    }
+    } */
 }
 
 @media (min-width: 1800px) {
-    .hpp-dtc-m-hero.internal-hero.how-sq-helps .content .pre-title {
+    /* .hpp-dtc-m-hero.internal-hero.how-sq-helps .content .pre-title {
         left: -35%;
-    }
+    } */
 }
 
 @media screen and (min-width: 768px) {
